# holdmybeer.fun

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 44ca8a20be05_add_files.py
src/backend/: api.py  exception_logger.py  exceptions.py  main.py
src/backend/auth/: __init__.py  endpoints.py  enums.py  exceptions.py  models.py  repository.py  schemas.py  service.py  shemas.py
src/backend/database/: __init__.py  base.py  connection_postgres.py  connection_redis.py  lifespan.py
src/backend/email/: __init__.py  endpoints.py  exceptions.py  html.py  repository.py  service.py  shemas.py
